add lombok annotations to all Entity classes and remove Getters and Setters. decouple Money -> Account, Account -> Client